--- a/.github/workflows/html_check.yml
+++ b/.github/workflows/html_check.yml
@@ -9,7 +9,15 @@ jobs:
       - name: 🚚 Get latest code
         uses: actions/checkout@v2.3.2
 
+      - name: Install Packages
+        run: |
+          npm install
+
+      - name: Build
+        run: |
+          npm run build
+
       - name: Checks HTML5
         uses: Cyb3r-Jak3/html5validator-action-experimental@v1
         with:
-          root: ./pages
+          root: ./dist
