--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
-    "sass-loader": "^11.0.1",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-scss": "^3.19.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.21.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
