--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.1",
+    "file-loader": "^6.2.0",
     "glob": "^7.1.6",
     "handlebars-webpack-plugin": "^2.2.1",
     "html-loader": "^1.3.2",
