--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@webpack-cli/init": "^1.1.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "@types/jest": "^26.0.20",
+    "babel-jest": "^26.6.3",
     "css-loader": "^5.1.1",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -32,6 +34,7 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "husky": "^5.0.9",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
