--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "lint": "prettier --check . && eslint . && stylelint \"**/*.scss\"",
+    "test": "jest",
     "lint:fix": "prettier --write . && eslint . --fix && stylelint \"**/*.scss\" --fix",
     "build": "webpack",
     "dev": "webpack serve  --port 5000"
@@ -16,15 +17,17 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
+    "@types/jest": "^26.0.20",
     "@webpack-cli/init": "^1.1.3",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^5.1.1",
-    "eslint": "^7.20.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
     "file-loader": "^6.2.0",
     "glob": "^7.1.6",
@@ -32,6 +35,7 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "husky": "^5.0.9",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
